--- a/wef005exercise1-1.css
+++ b/wef005exercise1-1.css
@@ -1,3 +1,9 @@
+@import url('./wef005exercise1-2.css');
+@import url('./wef005exercise1-3.css');
+
+
+
+
 .body {
     background-color: rgb(241, 207, 96);
     border-top: 20px;
@@ -31,6 +37,11 @@
 
 
 }
+
+
+/* .container-fluid .col-sm-6 {
+    
+} */
 /* 
 .row{
     margin-bottom: 20px;
