--- a/gol/gameOfLife.css
+++ b/gol/gameOfLife.css
@@ -33,12 +33,7 @@
     margin-bottom: 10px;
   }
   
-  @media only screen and (max-width: 568px) {
-    .header {
-      font-size: 24px;
-    }
-  }
-  
+
   .controls {
     display: flex;
     flex-direction: column;
@@ -70,3 +65,16 @@
       background-color: lightblue;
     }
   }
+
+  @media only screen and (max-width: 568px) {
+    .header {
+      font-size: 24px;
+    }
+  }
+  
+  @media only screen and (max-width: 768px) {
+    .paragraph {
+      font-size: 12px;
+    }
+  }
+  
