--- a/gol/gameOfLife.css
+++ b/gol/gameOfLife.css
@@ -60,6 +60,29 @@
 
   }
 
+
+  .spaceships{
+    
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      /* margin-bottom: 10px; */
+       /* Adjust the height if needed */
+    }
+
+    .spaceships button {
+      margin-bottom: 10px; /* Adjust the margin as desired */
+    }
+
+
+    .toggle-description {
+      margin-left: 10px;
+      font-size: 16px;
+      font-weight: bold;
+    }
+
+
   @media only screen and (max-width: 500px) {
     body {
       background-color: lightblue;
