--- a/wsp/05-typescript/public/css/index.css
+++ b/wsp/05-typescript/public/css/index.css
@@ -1,4 +1,44 @@
-/* This is a dummy CSS file */
 body {
-    background-color: #f0f0f0;
-  }
+  background-image: url("../assets/bg.jpg");
+}
+
+.container {
+  display: flex;
+}
+
+.portal {
+  width: 250px;
+  background-color: rgba(150, 20, 10, 0.9);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px;
+  height: fit-content;
+}
+
+.memos {
+  /* flex: 5; */
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.memo {
+  box-shadow: 1px 1px 5px black;
+  width: 200px;
+  height: 200px;
+  background-color: rgba(250, 200, 100, 0.8);
+  margin: 10px;
+}
+
+.text-memo {
+  width: 200px;
+  height: 200px;
+  background-color: rgba(250, 200, 100, 0.8);
+  margin-bottom: 10px;
+}
+
+#login-form{
+    display: flex;
+    flex-direction: column;
+}
